--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="zh-TW">
 <head>
   <meta charset="UTF-8">
-  <title>我的第一個網頁</title>
+  <title>我的網頁</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>🎉 歡迎來到我的第一個網站！</h1>
-  <p>這是我自己用 VS Code 建的網頁～</p>
+  <h1>🎉 歡迎來到我網站！</h1>
+  <p>未規劃頁面 因為我很懶惰~</p>～</p>
 
   <button onclick="sayHi()">點我試試</button>
 
