--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <h1>🎉 歡迎來到我網站！</h1>
-  <p>未規劃頁面 因為我很懶惰~</p>～</p>
+  <p>未規劃頁面 因為我很懶惰~</p>
 
   <button onclick="sayHi()">點我試試</button>
 
