--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         <option value="Blackpink">Blackpink</option>
         <option value="Rose">Rose</option>
         <option value="idle">idle</option>
+        <option value="babymonster">babymonster</option>
       </select>
       <input type="text" id="search-box" placeholder="🔍 搜尋商品..." onkeyup="filterProducts()">
     </div>
